--- a/index.html
+++ b/index.html
@@ -437,7 +437,15 @@
 <h3>Paint Application</h3>
 <p>A simple paint application built with C# Windows Forms that allows users to draw and save their artwork.</p>
 <a href="https://github.com/sameer-softengs/CP-PAINT-APPLICATION" target="_blank" class="project-link">View Project</a>
-</div>              <!-- add more projects -->
+</div>        
+              <div class="project-card">
+<img src="l.png" alt="GPA Calculator" class="project-img">
+<h3>GPA Calculator</h3>
+<p>Enhance your GPA calculator with real-time predictions, custom grading scales, weighted courses, and visual progress tracking.</p>
+<a href="https://sameer-softengs.github.io/Gpa-calculator/" target="_blank" class="project-link">View Project</a>
+</div>
+<!-- add more projects -->
+              <!-- add more projects -->
 </div>
 </section>
         <section id="contact" class="social-media-section">
