--- a/index.html
+++ b/index.html
@@ -444,6 +444,12 @@
 <p>Enhance your GPA calculator with real-time predictions, custom grading scales, weighted courses, and visual progress tracking.</p>
 <a href="https://sameer-softengs.github.io/Gpa-calculator/" target="_blank" class="project-link">View Project</a>
 </div>
+  <div class="project-card">
+  <img src="v.png" alt="Rashan" class="project-img">
+  <h3>Rashan</h3>
+  <p>It is an website typically used to enlist the grocery item to be bought and also save your last grocery list.</p>
+  <a href="https://sameer-softengs.github.io/grocery-system/" target="_blank" class="project-link">View Project</a>
+  </div>
 <!-- add more projects -->
               <!-- add more projects -->
 </div>
