--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             align-items: center;
             transition: right 0.3s ease;
             z-index: 1000;
+            background-color: #666;
         }
 
         .sidebar.open {
